================================================================================
Change history for ph-scale
================================================================================

DESIGN ISSUES
- how to combine color of liquid + water?
- what happens when dragging bars would result in pH outside range?

HIGH PRIORITY:

MEDIUM PRIORITY:
- add bars to graph
- make bars interactive
- tick marks on graph
- implement linear and log scale switching
- 10x zoom feature for linear graph, zoom into zero
- line up pH slider ticks with bar graph ticks
- generalize layout code
- address Kathy's problem with Java 1.4 Random class

LOW PRIORITY:
- can't align baselines of text and numbers drawn using HTMLNode
- pH text field isn't fully selected when it gains focus or when you double-click in it (PSwing issue?)
- add plumbing to liquid and water faucets?
- replace molecule image files with SphericalNode subclasses?
- change layout of molecule counts display?
- disable liquid and water sliders when beaker is full?

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc


DONE:
7/1/08 - keep constant power of ten 10^25 on H2O molecule count
7/1/08 - restructure bar graph code in preparation for flashing out this feature
7/1/08 - make molecules in count view the same size as molecules in legend
7/1/08 - adjust layout of molecules legend
7/1/08 - javadoc everything done up to this point
7/1/08 - put a translucent background behind molecule counts
******* version 0.00.06 (22824)
6/30/08 - add developer only display of particle counts, in lower left of beaker
6/30/08 - add property for min # particles of minority species, with developer control
6/30/08 - add developer control for # particles at pH=7
6/30/08 - add developer control for majority & minority species transparency